--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+    {% include 'partials/_navbar.html' %}
+    <h1>Homepage</h1>
+{% endblock %}
