--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -11,18 +11,53 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
 
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Register</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Profile <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Log Out</a>
-                </li>
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="{% url 'register' %}">Register</a>#}
+{#                </li>#}
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="{% url 'login' %}">Login</a>#}
+{#                </li>#}
+{#                {% if user.is_authenticated %}#}
+{#                <li class="nav-item active">#}
+{#                    <a class="nav-link" href="{% url 'profile' %}">Profile <span class="sr-only">(current)</span></a>#}
+{#                </li>#}
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link disabled" href="#">Log Out</a>#}
+{#                </li>#}
+                {% if user.is_authenticated %}
+        <li class="nav-item">
+            <a class="nav-link nav-link-icon" href="{% url 'profile' %}">
+
+                <span class="nav-link-inner--text  ">Profile</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link nav-link-icon" href="{% url 'post-create' %}">
+
+                <span class="nav-link-inner--text  ">Submit</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link nav-link-icon" href="{% url 'logout' %}">
+
+                <span class="nav-link-inner--text  ">Log Out</span>
+            </a>
+        </li>
+
+    {% else %}
+        <li class="nav-item">
+            <a class="nav-link nav-link-icon" href="{% url 'login' %}">
+
+                <span class="nav-link-inner--text  text-white">Sign In</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link nav-link-icon" href="{% url 'register' %}">
+
+                <span class="nav-link-inner--text  text-white">Sign Up</span>
+            </a>
+        </li>
+    {% endif %}
             </ul>
         </div>
     </div>
