--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="#">My Hood</a>
+        <a class="navbar-brand" href="{% url 'home' %}">My Hood</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="sr-only">Toggle navigation</span>
@@ -34,7 +34,7 @@
         <li class="nav-item">
             <a class="nav-link nav-link-icon" href="{% url 'post-create' %}">
 
-                <span class="nav-link-inner--text  ">Submit</span>
+                <span class="nav-link-inner--text  ">Create Post</span>
             </a>
         </li>
         <li class="nav-item">
