--- a/pages/templates/pages/post_detail.html
+++ b/pages/templates/pages/post_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    {% include 'navbar.html' %}
+    {% include 'partials/_navbar.html' %}
   <article class="card">
     <img class="card-img-top" src="{{ object.post_image.url }}" >
     <div class="card-body">
